Fix yt-dlp download, add command line logger, add redis cache for media file info